Add bundler